--- a/code.html
+++ b/code.html
@@ -37,14 +37,17 @@
             <li class="nav-bar-item navbar-right"><a href="./about.html">about</a></li>
             <li class="nav-bar-item navbar-right"><a href="./code.html">code</a></li>
             <li class="nav-bar-item navbar-right"><a href="#">blog</a></li>
-            <li class="nav-bar-item navbar-right"><a href="#">contact</a></li>
+            <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
     </nav>
 </head>
 
-<body>
 
-    <!-- ======= Navbar ======= -->
+
+
+
+
+    <!-- ======= Navbar =======
     <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
         <div class="container py-2 py-md-5">
         <div class="row align-items-start">
@@ -71,25 +74,25 @@
             </div>
         </div>
         </div>
-    </div>
+    </div> -->
 
-    <nav class="navbar navbar-light custom-navbar">
+    <!-- <nav class="navbar navbar-light custom-navbar">
         <div class="container">
             <a class="navbar-brand" href="./portfolio-template/index.html">MyPortfolio.</a>
             <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
         </a>
     </div>
-    </nav>
+    </nav> -->
 
-    <main id="main">
+    <!-- <main id="main">
 
     <!-- ======= Works Section ======= -->
-      <section class="section site-portfolio">
+      <!-- <section class="section site-portfolio">
         <div class="container">
           <div class="row mb-5 align-items-center">
             <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-              <h2>Hey, I'm Johan Stanworth</h2>
+              <h2>Hey, I'm Smith Scarborough</h2>
               <p class="mb-0">Freelance Creative &amp; Professional Graphics Designer</p>
             </div>
             <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
@@ -101,40 +104,49 @@
                 <a href="#" data-filter=".photography">Photography</a>
               </div>
             </div>
-          </div>
+          </div>  -->
+<div class="portfolio-title-container container">
+  <h2> My latest projects:</h2>
+
+  <!-- <div class="code-page-social-media-icons">
+    <a href="https://github.com/smithscarborough" target="_blank"><img src="./img/iconfinder_github_291716.png"</a>
+    <a href="https://www.linkedin.com/in/smith-scarborough/" target="_blank"><img src="./img/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png"></a>
+  </div> -->
+</div>  
+
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Boxed Water</h3>
-                  <span>Web</span>
+                  <h3>Bulb Note</h3>
+                  <span>JavaScript, CSS, Node.js, Express.js, PostgreSQL</span>
                 </div>
-                <img class="img-fluid" src="./portfolio-template/assets/img/img_1.jpg">
+                <img class="img-fluid" src="./img/bulb_note_project_thumbnail.JPG">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Build Indoo</h3>
-                  <span>Photography</span>
+                  <h3>WhatsGood</h3>
+                  <span>JavaScript, CSS, Leaflet Maps API</span>
                 </div>
-                <img class="img-fluid" src="./portfolio-template/assets/img/img_2.jpg">
+                <img class="img-fluid" src="./img/whats-good-project_thumbnail.JPG">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Cocooil</h3>
-                  <span>Branding</span>
+                  <h3>Python Virtual Assistant</h3>
+                  <span>Python</span>
                 </div>
-                <img class="img-fluid" src="./portfolio-template/img/img_3.jpg">
+                <img class="img-fluid" src="./img/python_virtual_assistant_thumbnail.JPG">
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Nike Shoe</h3>
-                  <span>Design</span>
+                  <h3>Pulse News</h3>
+                  <span>React</span>
                 </div>
                 <img class="img-fluid" src="./portfolio-template/assets/img/img_4.jpg">
               </a>
@@ -142,7 +154,7 @@
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Kitchen Sink</h3>
+                  <h3>Twitter Clone</h3>
                   <span>Photography</span>
                 </div>
                 <img class="img-fluid" src="./portfolio-template/assets/img/img_5.jpg">
@@ -151,8 +163,8 @@
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="./portfolio-template/assets/img/img_5.jpg" class="item-wrap fancybox">
                 <div class="work-info">
-                  <h3>Amazon</h3>
-                  <span>brandingn</span>
+                  <h3>To-Do List</h3>
+                  <span>branding</span>
                 </div>
                 <img class="img-fluid" src="./portfolio-template/assets/img/img_6.jpg">
               </a>
@@ -173,10 +185,9 @@
                   <div class="testimonial">
                     <img src="./portfolio-template/assets/img/person_1.jpg" alt="Image" class="img-fluid">
                     <blockquote>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                        explicabo inventore.</p>
+                      <p>Smith truly is a marvel to watch in the text editor.  Big things are in his future, no doubt.</p>
                     </blockquote>
-                    <p>&mdash; Jean Hicks</p>
+                    <p>&mdash; Bill Gates</p>
                   </div>
                 </div>
               </div><!-- End testimonial item -->
@@ -186,13 +197,33 @@
                   <div class="testimonial">
                     <img src="./portfolio-template/assets/img/person_2.jpg" alt="Image" class="img-fluid">
                     <blockquote>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                        explicabo inventore.</p>
+                      <p>Smith is the greatest programmer I have ever known.  I can't wait to see the
+                        open source contributions he makes to Linux.</p>
                     </blockquote>
-                    <p>&mdash; Chris Stanworth</p>
+                    <p>&mdash; Linus Torvalds</p>
                   </div>
                 </div>
               </div><!-- End testimonial item -->
+
+
+              <!-- experimental listing of technologies/skills section -->
+              <div class="swiper-slide">
+                <div class="testimonial-wrap">
+                  <div class="testimonial">
+                    <img src="./portfolio-template/assets/img/person_2.jpg" alt="Image" class="img-fluid">
+                    <blockquote>
+                      <p>Smith is the greatest programmer I have ever known.  I can't wait to see the
+                        open source contributions he makes to Linux.</p>
+                    </blockquote>
+                    <p>&mdash; Linus Torvalds</p>
+                  </div>
+                </div>
+              </div><!-- End testimonial item -->
+
+
+
+
+
   
             </div>
             <div class="swiper-pagination"></div>
@@ -208,8 +239,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
-            
+            <p class="mb-1">&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
           </div>
           <div class="col-sm-6 social text-md-end">
             <a href="#"><span class="bi bi-twitter"></span></a>
