--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 </div>
 <div class="gif-container">
-    <img class="home-gif" src="" alt="Smith trail running at Big Bend National Park"">
+    <img class="home-gif" src="./img/trail_running_big_bend.gif" alt="Smith trail running at Big Bend National Park"">
 </div>
 
 <div class="parallax-2">
