--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./code.css">
   <link rel="stylesheet" href="./contact.css">
+
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 </head>
+  <div class="header-fill"></div>
+
+
 
 <body>
     <!-- custom navbar -->
