--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
     <!-- Inconsolata Google Font link -->
     <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <!-- favicon links -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <!-- favicon link -->
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 </head>
 <body>
 
@@ -145,9 +142,9 @@
         <p> Hello, World! </p>
         <p>My name is Smith. (Yes, it's my first name.)</p>
         <p>I am a software engineer based in Houston, Texas, with a skillset focused on fullstack web development (click <a href="./code.html">here</a> to check out some of my latest projects).  I have a degree in Creative Writing from Rhodes College in Memphis, Tennessee, as well as an MBA and a software engineering certificate from a coding bootcamp.</p>
-        <p>When I'm not turning coffee into code, you can probably find me outside running, exploring Big Bend National Park (pictured above), or doing my best Jimi Hendrix impersonation on my surf green Fender Stratocaster.</p>
+        <p>When I'm not turning coffee into code, you can probably find me outside running, exploring Big Bend National Park (pictured above and below), or doing my best Jimi Hendrix impersonation on my surf green Fender Stratocaster.</p>
         <p>An avid runner, I competed on my college's cross country and track teams, and have completed over 20 marathons, 10x50-milers, and one 105-mile ultra-marathon.</p>
-        <p>I love the parallels that exist between coding and ultra-running. Both present a series of overwhelming obstacles, which, once broken down into their most basic parts, become entirely manageable and allow you to reach the finish line.</p>
+        <p>I love the parallels that exist between coding and ultra-running. Both consist of a series of challenges, which, on the surface may sometimes appear very large.  But once they are broken down into their most basic parts, become entirely manageable and allow you to move forward and reach the finish.</p>
         <p>I would love to hear from you, so please feel free to shoot me an email or leave a comment.</p>
         <p>Thanks for stopping by!</p>
 
@@ -162,7 +159,13 @@
 
 </div>
 <div class="gif-container">
-    <img class="home-gif" src="./img/trail_running_big_bend.gif" alt="Smith trail running at Big Bend National Park"">
+    <video controls autoplay loop>
+    
+        <source src="./img/big_bend_running_vid.mp4"
+                type="video/mp4">
+    
+        Sorry, your browser doesn't support embedded videos.
+    </video>
 </div>
 
 <div class="parallax-2">
