--- a/about.html
+++ b/about.html
@@ -4,21 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>smithscarborough.com</title>
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./about.css">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 </head>
 <body>
+    <div class="header-fill"></div>
+
+
     <nav class="nav-bar">
-        <div class="nav-bar-item navbar-left">SMITH SCARBOROUGH</div>
+        <a href="./index.html" class="home-link"><div class="nav-bar-item navbar-left">SMITH SCARBOROUGH</div></a>
         <ul class="nav-bar-menu">
             <li class="nav-bar-item navbar-right"><a href="./about.html">about</a></li>
-            <li class="nav-bar-item navbar-right"><a href="#">code</a></li>
+            <li class="nav-bar-item navbar-right"><a href="./code.html">code</a></li>
             <li class="nav-bar-item navbar-right"><a href="#">blog</a></li>
-            <li class="nav-bar-item navbar-right"><a href="#">contact</a></li>
+            <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
     </nav>
+
+    <h1 class="about-title container text-center">About</h1>
+    <br>
+    <div class="entry-content container justify-content-center">
+            <h6 class="text-center">Work Stuff</h6>
+            <p>I'm currently attending DigitalCrafts software engineering bootcamp in Houston, Texas, pursuing my passion for web development.</p>
+            <p>Previously, I was in sales/college admissions, where I tripled my quota ($8.56 million in revenue) for students attending from the Rio Grande Valley, the lowest socioeconomic region of the state, in two years' time.</p>
+            <p>See my full resume <a href="https://www.linkedin.com/in/smith-scarborough/">here.</a></p>
+            <h6 class="text-center">Fun Facts</h6>
+            <p>One time my car broke down the night before my first day of a new job in a new town, and so I ended up running 30 miles to work the next morning wearing a backpack full of all my stuff (i.e. khakis, dress shoes, toiletries, etc.).</p>
+            <p>In 2009, I did a Semester at Sea study abroad voyage, sailing around the world in 108-days with stops in the Bahamas, Spain, Gilbraltar, Morocco, the Canary Islands, Senegal, Namibia, South Africa, Mauritius, India, Thailand, Cambodia, Vietnam, China, Japan, Hawaii, Guatemala, and the Panama Canal.</p>
+            <p>I love learning about blues music history.  I drove the entire Mississippi Blues Highway (Highway 61), stopping at various historical markers along the way, including the legendary "Crossroads."</p>
+            <p>I once road-tripped with my cat Jim from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...):</p>
+
+        <div class="text-center">
+            <img src="./img/jim_new_mexico.jpg" alt="Smith and his cat Jim crossing the New Mexico State Line" width="300px">
+            <img src="./img/jim_colorado_line.jpg" alt="Smith and his cat Jim crossing the Colorado State Line" width="300px">
+            <img src="./img/jim_pikes_peak.jpg" alt="Smith and his cat Jim on the summit of Pikes Peak" width="300px">
+        </div>
+    </div>
+
+    <!-- temporary div while I develop the above parts -->
+    <div style="height: 300px;"></div>
+
+
 </body>
 </html>
