adds minor positioning adjustments to navbar and converts some px values to percentages

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <ul class="nav-bar-menu">
             <li class="nav-bar-item navbar-right"><a href="./about.html">about</a></li>
             <li class="nav-bar-item navbar-right"><a href="./code.html">code</a></li>
-            <li class="nav-bar-item navbar-right"><a href="#">blog</a></li>
+            <!-- <li class="nav-bar-item navbar-right"><a href="#">blog</a></li> -->
             <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
     </nav>
