--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>smithscarborough.com</title>
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
@@ -24,7 +26,7 @@
         <ul class="nav-bar-menu">
             <li class="nav-bar-item navbar-right"><a href="./about.html">about</a></li>
             <li class="nav-bar-item navbar-right"><a href="./code.html">code</a></li>
-            <li class="nav-bar-item navbar-right"><a href="#">blog</a></li>
+            <!-- <li class="nav-bar-item navbar-right"><a href="#">blog</a></li> -->
             <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
         <div class="burger">
@@ -137,7 +139,7 @@
     </div>
 </div>
 
-<div class="parallax-1">
+<div class="parallax-1 container">
     <div class="home-intro">
         <p> Hello, World! </p>
         <p>My name is Smith. (Yes, it's my first name.)</p>
@@ -158,8 +160,9 @@
     </div>
 
 </div>
-<div class="gif-container">
-    <video controls autoplay loop>
+
+<div class="video-container">
+    <video class="home-video" controls autoplay loop width="100%;">
     
         <source src="./img/big_bend_running_vid.mp4"
                 type="video/mp4">
