adds minor styling changes

--- a/index.html
+++ b/index.html
@@ -156,13 +156,12 @@
             <a href="https://www.instagram.com/smiffmo/?hl=en" target="_blank"><img src="./img/iconfinder_1_Instagram_colored_svg_1_5296765.png"></a>
             <!-- <a href="https://www.youtube.com/channel/UCIzFMNQhGIUwLhVQzjnqcpg" target="_blank"><img src="./img/iconfinder_1_Youtube_colored_svg_5296521.png"></a> -->
         </div>
-
     </div>
 
 </div>
 
 <div class="video-container">
-    <video class="home-video" controls autoplay loop width="100%;">
+    <video class="home-video" controls autoplay loop">
     
         <source src="./img/big_bend_running_vid.mp4"
                 type="video/mp4">
