adds MVP home page styling for home page desktop version

--- a/code.html
+++ b/code.html
@@ -213,7 +213,7 @@
                 </div>
               </div><!-- End testimonial item -->
   
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div class="testimonial-wrap">
                   <div class="testimonial">
                     <img src="./portfolio-template/assets/img/person_1.jpg" alt="Image" class="img-fluid">
@@ -225,7 +225,7 @@
                 </div>
               </div><!-- End testimonial item -->
   
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div class="testimonial-wrap">
                   <div class="testimonial">
                     <img src="./portfolio-template/assets/img/person_2.jpg" alt="Image" class="img-fluid">
@@ -236,26 +236,36 @@
                     <p>&mdash; Linus Torvalds</p>
                   </div>
                 </div>
-              </div><!-- End testimonial item -->
+              </div>End testimonial item --> 
 
 
-  
+<!--   
             </div>
             <div class="swiper-pagination"></div>
-          </div>
+          </div> -->
   
         </div>
-      </section><!-- End Testimonials Section -->
+      </section>
+      <!-- End Testimonials Section -->
   
     </main><!-- End #main -->
   
+
+    <div class="copyright-container container justify-content-center">
+      <p class="copyright">&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
+    </div>
+    
     <!-- ======= Footer ======= -->
     <footer class="footer" role="contentinfo">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6">
-            <p class="mb-1">&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
-          </div>
+          <!-- <div class="col-sm-6">
+            <p class="mb-1 copyright">&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
+          </div> -->
+
+
+
+
           <!-- <div class="col-sm-6 social text-md-end">
             <a href="#"><span class="bi bi-twitter"></span></a>
             <a href="#"><span class="bi bi-facebook"></span></a>
