adds contacts form

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
             <p>One time, my car broke down the night before my first day of a new job in a new town, and so I ended up running the 30 miles in to work the next morning, carrying a backpack full of all my stuff (i.e. khakis, dress shoes, toiletries, etc.).</p>
             <p>In 2009, I did a Semester at Sea study abroad voyage, sailing around the world in 108-days with stops in the Bahamas, Spain, Gilbraltar, Morocco, the Canary Islands, Senegal, Namibia, South Africa, Mauritius, India, Thailand, Cambodia, Vietnam, China, Japan, Hawaii, Guatemala, and the Panama Canal.</p>
             <p>I love playing the guitar and learning about blues music history.  I once drove the entire Mississippi Blues Highway (Highway 61), stopping at various historical markers along the way, including the legendary "Crossroads." &#127926;</p>
-            <p>I once took a road-trip on a whim with my rescue cat Jim, from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...).  Jim has since passed on, but fun memories like this are ones I will forever cherish!</p>
+            <p>I once took a road-trip on a whim with my rescue cat Jim, from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...).  Jim has since passed on, but fun memories like this I will cherish forever!:</p>
 
         <div class="text-center container">
             <img class="roadtrip-image" src="./img/jim_new_mexico.jpg" alt="Smith and his cat Jim crossing the New Mexico State Line" width="300px">
