adds correct route to contact form

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <li class="nav-bar-item navbar-right"><a href="./about.html">about</a></li>
             <li class="nav-bar-item navbar-right"><a href="./code.html">code</a></li>
             <!-- <li class="nav-bar-item navbar-right"><a href="#">blog</a></li> -->
-            <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
+            <li class="nav-bar-item navbar-right"><a href="./contact-2.0.html">contact</a></li>
         </ul>
     </nav>
 
