adds minor tweaks to homepage css

--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 
 <div class="parallax-1 container">
     <div class="home-intro">
-        <p> Hello, World! </p>
+    <img class="home-image" src="./img/big_bend_running_pic.JPG" alt="Smith standing on the South Rim Trail, Big Bend National Park">
+        <p class="hello-world"> Hello, World! </p>
         <p>My name is Smith. (Yes, it's my first name.)</p>
         <p>I am a software engineer based in Houston, Texas, with a skillset focused on fullstack web development (click <a href="./code.html">here</a> to check out some of my latest projects).  I have a degree in Creative Writing from Rhodes College in Memphis, Tennessee, as well as an MBA and a software engineering certificate from a coding bootcamp.</p>
         <p>When I'm not turning coffee into code, you can probably find me outside running, exploring Big Bend National Park (pictured above and below), or doing my best Jimi Hendrix impersonation on my surf green Fender Stratocaster.</p>
