--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
 
 
     <section id="contact">
-        <h1 class="section-header">CONTACT</h1>
+        <h1 class="about-header">Contact</h1>
+
         <div class="contact-wrapper">
 
                <!---------------- 
@@ -61,7 +62,7 @@
 
         <div class="form-group">
             <div class="col-sm-12">
-              <input type="subject" class="form-control" id="email" placeholder="EMAIL" name="email" value="" required>
+              <input type="subject" class="form-control" id="subject placeholder="SUBJECT" name="subject" value="" required>
             </div>
           </div>
   
