--- a/about.html
+++ b/about.html
@@ -32,6 +32,11 @@
             <!-- <li class="nav-bar-item navbar-right"><a href="#">blog</a></li> -->
             <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
 
     <h1 class="about-title container text-center">About</h1>
@@ -58,6 +63,6 @@
     <!-- temporary div while I develop the above parts -->
     <div style="height: 150px;"></div>
 
-
+    <script src="./index.js"></script>
 </body>
 </html>
