adds basic mobile responsiveness to about and code pages

--- a/code.html
+++ b/code.html
@@ -45,13 +45,15 @@
             <!-- <li class="nav-bar-item navbar-right"><a href="#">blog</a></li> -->
             <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+      </div>
     </nav>
 </head>
 
-
-
-
-
+<div class="spacer-container"></div>
 
     <!-- ======= Navbar =======
     <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
@@ -287,6 +289,7 @@
   
     <!-- Template Main JS File -->
     <script src="./portfolio-template/assets/js/main.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
 
