adds header/footer flair to multiple pages

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 </head>
 <body>
-    <div class="header-fill"></div>
+    <div class="header-flair"></div>
 
 
     <nav class="nav-bar">
@@ -62,6 +62,7 @@
 
     <!-- temporary div while I develop the above parts -->
     <div style="height: 150px;"></div>
+    <div class="footer-flair"></div>
 
     <script src="./index.js"></script>
 </body>
