--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
     <p>&copy; Copyright 2021 Smith Scarborough. All Rights Reserved.</p>
 </div>
 
+    <div class="footer-flair"></div>
 
 <script src="./index.js"></script>
 </body>
