--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,14 @@
             <!-- <li class="nav-bar-item navbar-right"><a href="#">blog</a></li> -->
             <li class="nav-bar-item navbar-right"><a href="./contact.html">contact</a></li>
         </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+      </div>
     </nav>
+
+    <div class="spacer-container"></div>
 
 
     <section id="contact">
@@ -120,7 +127,7 @@
 
     <div class="footer-flair"></div>
 
-
-<script src="./contact-2.0.js"></script>
+<script src="./index.js"></script>
+<script src="./contact.js"></script>
 </body>
 </html>
