adds text to skills section

--- a/code.html
+++ b/code.html
@@ -194,6 +194,8 @@
               <div class="swiper-slide">
                 <div class="testimonial-wrap">
                   <div class="testimonial">
+                    <h5>I am proficient in the following technologies:</h5>
+                    <p></p>
                     <img src="./img/icons/icons8-html-5-144.png" alt="HTML5 logo" class="img-fluid">
                     <img src="./img/icons/icons8-css3-144.png" alt="CSS3 logo" class="img-fluid">
                     <img src="./img/icons/icons8-javascript-96.png" alt="JS logo" class="img-fluid">
