adds shooting star to home page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="line3"></div>
         </div>
     </nav>
+    <div class="mobile-shooting-star"></div>
     <div class="stars-container">
         <div class="shooting-star"></div>
         <div class="star twinkle-star-1"></div>
