adds mobile-shooting-star-container to see if that fixes animation glitch on mobile

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
         </div>
     </nav>
 
+    <div class="mobile-star-container">
         <div class="mobile-shooting-star"></div>
-
+    </div>
+    
     <div class="stars-container">
         <div class="shooting-star"></div>
         <div class="star twinkle-star-1"></div>
