adds subject placeholder in contact form

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
         <div class="form-group">
             <div class="col-sm-12">
-              <input type="subject" class="form-control" id="subject placeholder="SUBJECT" name="subject" value="" required>
+              <input type="subject" class="form-control" id="subject" placeholder="SUBJECT" name="subject" value="" required>
             </div>
           </div>
   
