tweaks sizing on some of the stars on home page

--- a/code.html
+++ b/code.html
@@ -124,7 +124,7 @@
 
           <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
             <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
+              <a href="https://github.com/smithscarborough/note" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Bulb Note</h3>
                   <span>JavaScript, CSS, Node.js, Express.js, PostgreSQL</span>
@@ -133,7 +133,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
+              <a href="https://github.com/smithscarborough/FrontEndGroupProject" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>WhatsGood</h3>
                   <span>JavaScript, CSS, Leaflet Maps API</span>
@@ -142,7 +142,7 @@
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
+              <a href="https://github.com/smithscarborough/python-virtual-assistant" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Python Virtual Assistant</h3>
                   <span>Python</span>
@@ -151,7 +151,7 @@
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
+              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Pulse News</h3>
                   <span>React, Material-UI</span>
@@ -160,7 +160,7 @@
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox">
+              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Twitter Clone</h3>
                   <span>React, Material-UI</span>
@@ -169,7 +169,7 @@
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/assets/img/img_5.jpg" class="item-wrap fancybox">
+              <a href="./portfolio-template/assets/img/img_5.jpg" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>To-Do List</h3>
                   <span>React</span>
