--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="mobile-star-container">
         <div class="mobile-shooting-star"></div>
     </div>
-    
+
     <div class="stars-container">
         <div class="shooting-star"></div>
         <div class="star twinkle-star-1"></div>
@@ -156,7 +156,7 @@
         <p>I am a software engineer based in Houston, Texas, with a skillset focused on fullstack web development (click <a href="./code.html">here</a> to check out some of my latest projects).  I have a degree in Creative Writing from Rhodes College in Memphis, Tennessee, as well as an MBA and a software engineering certificate from a coding bootcamp.</p>
         <p>When I'm not turning coffee into code, you can probably find me outside running, exploring Big Bend National Park (pictured above and below), or doing my best Jimi Hendrix impersonation on my surf green Fender Stratocaster.</p>
         <p>An avid runner, I competed on my college's cross country and track teams, and have completed over 20 marathons, 10x50-milers, and one 105-mile ultra-marathon.</p>
-        <p>I love the parallels that exist between coding and ultra-running. Both consist of a series of challenges, which, on the surface may sometimes appear very large.  But once they are broken down into their most basic parts, become entirely manageable and allow you to move forward and reach the finish.</p>
+        <p>I love the parallels between coding and ultra-running. Both are a matter of problem solving, and breaking sometimes huge-seeming obstacles down into their most basic components, until they become entirely manageable, allowing you to keep moving and reach the finish line.</p>
         <p>I would love to hear from you, so please feel free to shoot me an email or leave a comment.</p>
         <p>Thanks for stopping by!</p>
 
