--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
     <h1 class="about-title container text-center">About</h1>
     <br>
     <div class="entry-content container justify-content-center">
-            <h6 class="text-center">Work Stuff</h6>
-            <p>I'm currently attending DigitalCrafts software engineering bootcamp in Houston, Texas, pursuing my passion for web development.</p>
-            <p>Previously, I was in sales/college admissions, where I tripled my quota ($8.56 million in revenue) for the number of students attending from the Rio Grande Valley, the lowest socioeconomic region of Texas, in two years' time.</p>
+            <h6 class="about-subheader text-center">Work Stuff</h6>
+            <p>I am currently attending DigitalCrafts software engineering bootcamp in Houston, Texas, pursuing my passion for web development.</p>
+            <p>Previously, I was in college admissions/sales, where I tripled the enrollment of students ($8.56 million in revenue) attending from the Rio Grande Valley, the lowest socioeconomic region of Texas, in two years' time.</p>
             <p>See my full resume <a href="https://www.linkedin.com/in/smith-scarborough/">here.</a></p>
-            <h6 class="text-center">Fun Facts</h6>
-            <p>One time, my car broke down the night before my first day of a new job in a new town, and so I ended up running the 30 miles in to work the next morning, carrying a backpack full of all my stuff (i.e. khakis, dress shoes, toiletries, etc.).</p>
+            <h6 class="about-subheader text-center">Fun Facts</h6>
+            <p>Once, my car broke down the night before my first day of a new job, in a new town, and so I ended up running the 30 miles in to work the next morning, carrying a backpack full of all my stuff (i.e. khakis, dress shoes, toiletries, etc.).</p>
             <p>In 2009, I did a Semester at Sea study abroad voyage, sailing around the world in 108-days with stops in the Bahamas, Spain, Gilbraltar, Morocco, the Canary Islands, Senegal, Namibia, South Africa, Mauritius, India, Thailand, Cambodia, Vietnam, China, Japan, Hawaii, Guatemala, and the Panama Canal.</p>
             <p>I love playing the guitar and learning about blues music history.  I once drove the entire Mississippi Blues Highway (Highway 61), stopping at various historical markers along the way, including the legendary "Crossroads." &#127926;</p>
             <p>I once took a road-trip on a whim with my rescue cat Jim, from Houston, Texas, to the summit of Pikes Peak (14,115'), Colorado (perfectly sane...).  Jim has since passed on, but fun memories like this I will cherish forever!:</p>
