adds styling consistency across pages

--- a/code.html
+++ b/code.html
@@ -151,30 +151,30 @@
               </a>
             </div>
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox" target="_blank">
+              <a href="https://github.com/smithscarborough/joke-app" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Pulse News</h3>
-                  <span>React, Material-UI</span>
+                  <span>React, API</span>
                 </div>
-                <img class="img-fluid" src="./img/pulse_news_logo.jpeg">
+                <img class="img-fluid" src="./img/jokes_app_screenshot.png">
               </a>
             </div>
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/work-single.html" class="item-wrap fancybox" target="_blank">
+              <a href="https://github.com/smithscarborough/scene-it-react-redux" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Twitter Clone</h3>
-                  <span>React, Material-UI</span>
+                  <span>React, Material-UI, API, local storage</span>
                 </div>
-                <img class="img-fluid" src="./portfolio-template/assets/img/img_5.jpg">
+                <img class="img-fluid" src="./img/scene-it-react-redux-screenshot.png">
               </a>
             </div>
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="./portfolio-template/assets/img/img_5.jpg" class="item-wrap fancybox" target="_blank">
+              <a href="https://github.com/smithscarborough/memory-game" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>To-Do List</h3>
                   <span>React</span>
                 </div>
-                <img class="img-fluid" src="./portfolio-template/assets/img/img_6.jpg">
+                <img class="img-fluid" src="./img/memory-game-app-screenshot.png">
               </a>
             </div>
           </div>
