adds minor spelling corrections

--- a/code.html
+++ b/code.html
@@ -127,7 +127,7 @@
               <a href="https://github.com/smithscarborough/note" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>Bulb Note</h3>
-                  <span>JavaScript, CSS, Node.js, Express.js, PostgreSQL</span>
+                  <span>JavaScript, HTML, CSS, Node.js, Express.js, PostgreSQL</span>
                 </div>
                 <img class="img-fluid" src="./img/bulb_note_project_thumbnail.JPG">
               </a>
@@ -136,7 +136,7 @@
               <a href="https://github.com/smithscarborough/FrontEndGroupProject" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
                   <h3>WhatsGood</h3>
-                  <span>JavaScript, CSS, Leaflet Maps API</span>
+                  <span>JavaScript, Bootstrap, HTML, CSS, Leaflet Maps API</span>
                 </div>
                 <img class="img-fluid" src="./img/whats-good-project_thumbnail.JPG">
               </a>
@@ -153,7 +153,7 @@
             <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/joke-app" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>Pulse News</h3>
+                  <h3>Chuck Norris Joke Generator</h3>
                   <span>React, API</span>
                 </div>
                 <img class="img-fluid" src="./img/jokes_app_screenshot.png">
@@ -162,7 +162,7 @@
             <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/scene-it-react-redux" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>Twitter Clone</h3>
+                  <h3>Scene It</h3>
                   <span>React, Material-UI, API, local storage</span>
                 </div>
                 <img class="img-fluid" src="./img/scene-it-react-redux-screenshot.png">
@@ -171,7 +171,7 @@
             <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
               <a href="https://github.com/smithscarborough/memory-game" class="item-wrap fancybox" target="_blank">
                 <div class="work-info">
-                  <h3>To-Do List</h3>
+                  <h3>Memory Game</h3>
                   <span>React</span>
                 </div>
                 <img class="img-fluid" src="./img/memory-game-app-screenshot.png">
